# axum

./: Cargo.toml  config.toml
axum-learn/: Cargo.toml
axum-learn/sql/: users.sql
axum-learn/src/: app.rs  db.rs  error.rs  lib.rs  log.rs  main.rs  permission.rs  server.rs  util.rs
axum-learn/src/config/: db.rs  jwt.rs  log.rs  mod.rs  server.rs
axum-learn/src/entity/: user.rs
axum-learn/src/middleware/: auth.rs  cors.rs  limit.rs  mod.rs  normalize_path.rs  timeout.rs  trace.rs
axum-learn/src/router/: auth.rs  extract.rs  mod.rs  pagination.rs  response.rs  user.rs
macros/src/: lib.rs
